--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,7 +15,7 @@
         android:windowSoftInputMode="adjustResize"
         android:theme="@style/Theme.RasaChatbotApp">
         <activity
-            android:name=".MainActivity"
+            android:name=".loginActivity"
             android:exported="true"
             android:label="@string/app_name"
             android:theme="@style/Theme.RasaChatbotApp.NoActionBar">
