--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -26,6 +26,7 @@
             </intent-filter>
         </activity>
         <activity android:name=".registerActivity"></activity>
+        <activity android:name=".MainActivity"></activity>
 
     </application>
 
