--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,6 +2,7 @@ plugins {
     id 'com.android.application'
     id 'kotlin-android'
     id 'com.google.devtools.ksp' version '1.6.10-1.0.2'
+    id 'com.google.gms.google-services'
 }
 
 kotlin {
@@ -86,5 +87,7 @@ dependencies {
     implementation "io.coil-kt:coil-video:$coil_version"
 
     implementation 'io.github.raamcosta.compose-destinations:core:1.1.2-beta'
+    implementation platform('com.google.firebase:firebase-bom:30.4.1')
+    implementation 'com.google.firebase:firebase-analytics-ktx'
     ksp 'io.github.raamcosta.compose-destinations:ksp:1.1.2-beta'
 }
