--- a/app/build.gradle
+++ b/app/build.gradle
@@ -89,5 +89,8 @@ dependencies {
     implementation 'io.github.raamcosta.compose-destinations:core:1.1.2-beta'
     implementation platform('com.google.firebase:firebase-bom:30.4.1')
     implementation 'com.google.firebase:firebase-analytics-ktx'
+    // When using the BoM, you don't specify versions in Firebase library dependencies
+    implementation 'com.google.firebase:firebase-auth-ktx'
+    
     ksp 'io.github.raamcosta.compose-destinations:ksp:1.1.2-beta'
 }
