--- a/app/build.gradle
+++ b/app/build.gradle
@@ -87,10 +87,12 @@ dependencies {
     implementation "io.coil-kt:coil-video:$coil_version"
 
     implementation 'io.github.raamcosta.compose-destinations:core:1.1.2-beta'
-    implementation platform('com.google.firebase:firebase-bom:30.4.1')
+    implementation platform('com.google.firebase:firebase-bom:30.5.0')
     implementation 'com.google.firebase:firebase-analytics-ktx'
+
     // When using the BoM, you don't specify versions in Firebase library dependencies
     implementation 'com.google.firebase:firebase-auth-ktx'
+    implementation 'com.google.firebase:firebase-core'
     
     ksp 'io.github.raamcosta.compose-destinations:ksp:1.1.2-beta'
 }
