--- a/app/build.gradle
+++ b/app/build.gradle
@@ -93,6 +93,7 @@ dependencies {
     // When using the BoM, you don't specify versions in Firebase library dependencies
     implementation 'com.google.firebase:firebase-auth-ktx'
     implementation 'com.google.firebase:firebase-core'
+    implementation 'com.google.firebase:firebase-firestore-ktx'
     
     ksp 'io.github.raamcosta.compose-destinations:ksp:1.1.2-beta'
 }
