Database url added

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -89,14 +89,14 @@ dependencies {
 
     implementation 'io.github.raamcosta.compose-destinations:core:1.1.2-beta'
     implementation platform('com.google.firebase:firebase-bom:30.5.0')
-    implementation 'com.google.firebase:firebase-analytics-ktx'
+    implementation 'com.google.firebase:firebase-analytics'
 
     // When using the BoM, you don't specify versions in Firebase library dependencies
     implementation 'com.google.firebase:firebase-auth-ktx'
     implementation 'com.google.firebase:firebase-core'
     implementation 'com.google.firebase:firebase-firestore-ktx'
 
-    implementation 'com.google.firebase:firebase-database:20.1.0'
-    
+//    implementation 'com.google.firebase:firebase-database:20.1.0'
+    implementation 'com.google.firebase:firebase-database'
     ksp 'io.github.raamcosta.compose-destinations:ksp:1.1.2-beta'
 }
