--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -38,6 +38,8 @@
         </activity>
         <activity android:name=".registerActivity" />
         <activity android:name=".login" />
+        <activity android:name=".signup" />
+        <activity android:name=".MainMenu" />
     </application>
 
 </manifest>
